--- a/projects/ngx-image-cropper/src/lib/ngx-image-cropper.component.html
+++ b/projects/ngx-image-cropper/src/lib/ngx-image-cropper.component.html
@@ -1,12 +1,12 @@
 <ion-header class="ion-no-border">
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-button color="danger" (click)="cancel()">
+            <ion-button (click)="cancel()">
                 <ion-icon name="arrow-back-outline"></ion-icon>
             </ion-button>
         </ion-buttons>
         <ion-buttons slot="end">
-            <ion-button color="secondary" (click)="ok()">
+            <ion-button (click)="ok()">
                 <ion-icon slot="start" name="checkmark-done-outline"></ion-icon> Ok
             </ion-button>
         </ion-buttons>
